<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.blindroid1.MainActivity"
    xmlns:Blindroid="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        Blindroid:showAsAction="never"
        android:title="@string/ajustes" />
    <item
        android:id="@+id/tutorial"
        android:orderInCategory="100"
        Blindroid:showAsAction="never"
        android:title="@string/tutorial" />
    <item
        android:id="@+id/contacto"
        android:orderInCategory="103"
        Blindroid:showAsAction="never"
        android:title="@string/contacto" />
    <item
        android:id="@+id/compartir"
        android:icon="@drawable/compartir"
        android:orderInCategory="101"
        Blindroid:showAsAction="ifRoom"
        android:title="@string/compartir" />
    <item
        android:id="@+id/info"
        android:icon="@drawable/info"
        android:orderInCategory="102"
        Blindroid:showAsAction="ifRoom"
        android:title="@string/info" />

</menu>
