<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_container"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/choose_contact"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/dialog_divider" />



        <ListView
            android:id="@+id/dialoglist"
            android:layout_width="wrap_content"
            android:layout_height="150dp"/>


     <LinearLayout
        android:id="@+id/botonera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:id="@+id/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/reintentar"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_selector"
            android:text="@string/cancelar"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>